# astrapi-mirror

./: .claude-memory.md  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: publish.yml
astrapi_mirror/: _app.py  _cli.py  _paths.py  _repo_info.py  app.yaml  config.yaml  navigation.yaml
astrapi_mirror/api/: astrapi_mirror.db  fastapi_app.py  repo.py
astrapi_mirror/modules/archlinux/: __init__.py  _seed.py  api.py  jobs.py  storage.py
astrapi_mirror/modules/archlinux/_sync_engine/: __init__.py  downloader.py  engine.py  validator.py
astrapi_mirror/modules/archlinux/config/: modul.yaml  schema.yaml  settings.yaml
astrapi_mirror/modules/archlinux/dialogs/info/: modal.html
astrapi_mirror/modules/archlinux/dialogs/log/: modal.html
astrapi_mirror/modules/archlinux/dialogs/validate/: modal.html
astrapi_mirror/modules/archlinux/templates/: content.html
astrapi_mirror/modules/archlinux/ui/: __init__.py  crud.py
astrapi_mirror/modules/debian/: __init__.py  _seed.py  api.py  engine.py  jobs.py  modul.yaml  schema.yaml  settings.yaml  storage.py  ui.py
astrapi_mirror/modules/debian/_sync_engine/: __init__.py  downloader.py  engine.py  validator.py  versioning.py
astrapi_mirror/modules/debian/config/: modul.yaml  schema.yaml  settings.yaml
astrapi_mirror/modules/debian/ui/: __init__.py  crud.py
astrapi_mirror/overrides/: system.py
docs/: refrapt-integration-plan.md
tests/: conftest.py  test_alle_module_aufrufbar.py  test_button_aktionen.py
(+28 files in other folders)
